...
      }
    },
    "3D" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Ajouter" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Aperçu" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Boîte + puisard" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Comment mesurer la hauteur à la pige ?" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Coupe" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Cuve principale (mm)" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Cylindre horizontal" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Cylindre vertical" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Foire aux questions" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Forme" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Forme libre" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "H. exacte" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Importer (JSON)" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Langue" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Lecture & mesure" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Liquides" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Liquides d'exemple" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Mesure" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Modifier" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "PDF" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Points de jauge" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Puisard (mm)" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Récipients" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Récipients d'exemple" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Réglages" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Réinitialiser l'app" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Repères tous les" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Table de graduation" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Table de pige" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Terminé" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Tout effacer et restaurer les exemples" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Volume connu" : {
      "localizations" : {
        "en" : {
...
